# EdgeIQ

./: .gitignore  README.md  app.py  config.py  desktop.py  edgeiq.db  pyproject.toml  requirements.txt
analytics/: backtesting.py  calibration.py  confidence.py  correlation.py  defense_vs_position.py  edgeiq_model.py  entry_recommendation.py  entry_suggestions.py  ev.py  form.py  hit_rate.py  kelly.py  line_movement.py  model_feedback.py  pickem_payouts.py  projection.py  prop_metrics.py  prop_recommendation.py  recommendation.py  risk.py
assets/: EdgeIQ.icns
gui/: app.py  styles.py
models/: bet.py  platform.py  prop.py  stat_type.py
repository/: bet_repository.py  database.py  entities.py
scripts/: generate_desktop_icon.py  install_desktop_app.sh  launch_edgeiq.sh  run_edgeiq_desktop.sh
services/: dashboard.py  defense_service.py  entry_builder.py  entry_workflow.py  input_service  odds.py  probability.py  prop_builder.py  prop_workflow.py  tracker.py
tests/: test_api.py  test_correlation.py  test_dashboard_props.py  test_defense.py  test_edgeiq_model.py  test_entity_normalization.py  test_entry.py  test_entry_auto_projection.py  test_entry_suggestions.py  test_ev.py  test_pickem_payouts.py  test_player_identity_repository.py  test_prop_analysis.py  test_prop_analyzer.py  test_repository.py  test_settlement_audit_repository.py  test_walk_forward_backtesting.py  test_web_api.py
ui/: entry_analysis.py  entry_view.py  prop_analysis.py  review.py
utils/: display.py  entity_normalization.py  logging.py  stat_normalization.py  time.py
web/: __init__.py  (+1 more)
(+103 files in other folders)
