[project]
name = "edgeiq"
version = "2.0.0a0"
description = "Desktop and CLI tools for player prop analysis and bet tracking."
requires-python = ">=3.11"
dependencies = [
    "PyQt6==6.11.0",
    "PyQt6-Charts==6.11.0",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
    "rich==15.0.0",
    "SQLAlchemy==2.0.51",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
